Add new recipes
New recipes and links are put in a list for better presentation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/macandcheese.html">Simple Macaroni and Cheese</a>
-</body>
-
+    <ul>
+        <li><a href="recipes/macandcheese.html">Italian Mac and Cheese</a></li>
+        <li><a href="recipes/steakmarinade.html">Best Steak Marinade in Existence</a></li>
+        <li><a href="recipes/baconwrap.html">Bacon-Wrapped Jalapeno Poppers</a></li>
+    </ul>
 </html>
