--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -5,6 +5,35 @@
     <title>Mac and Cheese Recipe</title>
 </head>
 <body>
-    <h1>Simple Macaroni and Cheese</h1>
+    <h1>Italian Mac and Cheese</h1>
+    <img src="https://www.allrecipes.com/thmb/YmwdBzsLQFr0oRj9sOi5ior0V_Q=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Italian-Mac-and-Cheese-4x-fbc48d31a21c44e0b3498c889265934a.jpg">
+    <h2>This dish comes together in about 45 minutes for a quick weeknight dinner.</h2>
+    <p>A green salad will pair perfectly with this dish.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>8 ounces penne pasta</li>
+        <li>10 ounces Italian sausage</li>
+        <li>1 ½ tablespoons unsalted butter</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 pinch crushed red pepper flakes (Optional)</li>
+        <li>1 tablespoon flour</li>
+        <li>1 cup 1% milk</li>
+        <li>½ cup heavy whipping cream</li>
+        <li>¼ cup reserved pasta water</li>
+        <li>1 ¼ ounces grated mozzarella cheese</li>
+        <li>1 ¼ ounces grated provolone cheese</li>
+        <li>1 ¼ ounces grated Fontina cheese</li>
+        <li>1 ¼ ounces finely grated Parmesan cheese</li>
+        <li>¼ cup julienned sun-dried tomatoes</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil. Add penne and cook, stirring occasionally, until penne start to get tender, about 8 minutes. Drain and reserve 1/4 cup pasta water.</li>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Meanwhile, cook Italian sausage in a heavy skillet over medium-high heat until brown and crumbly, about 5 minutes. Transfer to a paper towel lined plate.</li>
+        <li>Melt butter in a skillet over medium heat. Sauté minced garlic and red pepper flakes until garlic is fragrant, 30 to 45 seconds. Sprinkle flour over mixture and stir to combine, making sure there are no lumps.</li>
+        <li>Pour in milk, cream, and reserved pasta water. Mix mozzarella, provolone, Fontina, and Parmesan cheeses in a bowl and stir in about 4/5th of the cheese mixture. Stir to combine. Add penne, cooked Italian sausage, and julienned sun dried tomatoes to the cheese sauce. Mix to combine and pour into an 8x8 inch casserole dish. Sprinkle with remaining cheese mixture.</li>
+        <li>Bake in the preheated oven until cheese is melted and lightly browned, about 25 minutes.</li>
+    </ol>
 </body>
 </html>
