--- a/recipes/baconwrap.html
+++ b/recipes/baconwrap.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Bacon-Wrapped Jalapeno Poppers</h1>
     <img src="https://www.allrecipes.com/thmb/c-aWAQA51GLfBQT8mVvVOqAMttA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/233603-Bacon-Wrapped-Jalapeno-Poppers-hungryallweighs-4x3jpg-9e0b436b8ba44abda8b77dd4385e2235.jpg" alt="Bacon-Wrapped Jalapeno">
-    <h2>These jalapeño poppers are creamy in the middle with crispy bacon on the outside. They're easy to make and taste so much better than traditional poppers.</h2>
-    <p>Get the party started with this 4-ingredient jalapeño popper recipe. Stuffed with a rich cream cheese-Cheddar mixture and wrapped in crispy bacon, it doesn't get much better than this top-rated appetizer!</p>
+    <h2>Description</h2>
+    <p>These jalapeño poppers are creamy in the middle with crispy bacon on the outside. They're easy to make and taste so much better than traditional poppers. Get the party started with this 4-ingredient jalapeño popper recipe. Stuffed with a rich cream cheese-Cheddar mixture and wrapped in crispy bacon, it doesn't get much better than this top-rated appetizer!</p>
     <h2>Ingredients</h2>
     <ul>
         <li>½ cup cream cheese</li>
