--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Italian Mac and Cheese</h1>
     <img src="https://www.allrecipes.com/thmb/YmwdBzsLQFr0oRj9sOi5ior0V_Q=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Italian-Mac-and-Cheese-4x-fbc48d31a21c44e0b3498c889265934a.jpg">
-    <h2>This dish comes together in about 45 minutes for a quick weeknight dinner.</h2>
-    <p>A green salad will pair perfectly with this dish.</p>
+    <h2>Description</h2>
+    <p>This dish comes together in about 45 minutes for a quick weeknight dinner. A green salad will pair perfectly with this dish.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>8 ounces penne pasta</li>
