--- a/recipes/steakmarinade.html
+++ b/recipes/steakmarinade.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Best Steak Marinade in Existence</h1>
     <img src="https://www.allrecipes.com/thmb/tb61Fhkmb7CZ_AbSe7hQ8ggtknQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/143809-best-steak-marinade-in-existence-ARMag-3x2-1-8d7d61255c1e43aba092552e45c9d88d.jpg" alt-="steak marinade">
-    <h2>This steak marinade is a family recipe that has been developed only over the last 5 years. In this short time, it's made me famous in our close circle, but until now I've never shared it with anyone.</h2>
-    <p>We're not exaggerating with the title: This is truly the best steak marinade recipe in existence.</p>
+    <h2>Description</h2>
+    <p>This steak marinade is a family recipe that has been developed only over the last 5 years. In this short time, it's made me famous in our close circle, but until now I've never shared it with anyone. We're not exaggerating with the title: This is truly the best steak marinade recipe in existence.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>½ cup olive oil</li>
