--- a/recipes/baconwrap.html
+++ b/recipes/baconwrap.html
@@ -3,26 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Bacon-Wrapped Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <h1>Bacon-Wrapped Jalapeno Poppers</h1>
-    <img src="https://www.allrecipes.com/thmb/c-aWAQA51GLfBQT8mVvVOqAMttA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/233603-Bacon-Wrapped-Jalapeno-Poppers-hungryallweighs-4x3jpg-9e0b436b8ba44abda8b77dd4385e2235.jpg" alt="Bacon-Wrapped Jalapeno">
-    <h2>Description</h2>
-    <p>These jalapeño poppers are creamy in the middle with crispy bacon on the outside. They're easy to make and taste so much better than traditional poppers. Get the party started with this 4-ingredient jalapeño popper recipe. Stuffed with a rich cream cheese-Cheddar mixture and wrapped in crispy bacon, it doesn't get much better than this top-rated appetizer!</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>½ cup cream cheese</li>
-        <li>½ cup shredded sharp Cheddar cheese</li>
-        <li>12 jalapeno peppers, halved lengthwise, seeds and membranes removed</li>
-        <li>12 slices bacon</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Gather ingredients. Preheat the oven to 400 degrees F (200 degrees C). Line a baking sheet with aluminum foil.</li>
-        <li>Mix cream cheese and Cheddar cheese together in a bowl until evenly blended. Fill each jalapeño half with cheese mixture.</li>
-        <li>Put halves back together and wrap each stuffed pepper with a slice of bacon. Arrange bacon-wrapped peppers on the prepared baking sheet.</li>
-        <li>Bake in the preheated oven until bacon is crispy, 25 to 35 minutes.</li>
-        <li>Serve hot with your favorite dipping sauce. Enjoy!</li>
-    </ol>
+<body class="body">
+    <div class="about">
+        <h1>Bacon-Wrapped Jalapeno Poppers</h1>
+        <p class="descr">These jalapeño poppers are creamy in the middle with crispy bacon on the outside. They're easy to make and taste so much better than traditional poppers. Get the party started with this 4-ingredient jalapeño popper recipe. Stuffed with a rich cream cheese-Cheddar mixture and wrapped in crispy bacon, it doesn't get much better than this top-rated appetizer!</p>
+        <img class="resize2" src="https://www.allrecipes.com/thmb/c-aWAQA51GLfBQT8mVvVOqAMttA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/233603-Bacon-Wrapped-Jalapeno-Poppers-hungryallweighs-4x3jpg-9e0b436b8ba44abda8b77dd4385e2235.jpg" alt="Bacon-Wrapped Jalapeno">
+    </div>
+    <div class="content">
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>½ cup cream cheese</li>
+                <li>½ cup shredded sharp Cheddar cheese</li>
+                <li>12 jalapeno peppers, halved lengthwise, seeds and membranes removed</li>
+                <li>12 slices bacon</li>
+            </ul>
+        </div>
+        <div class="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>Gather ingredients. Preheat the oven to 400 degrees F (200 degrees C). Line a baking sheet with aluminum foil.</li>
+                <li>Mix cream cheese and Cheddar cheese together in a bowl until evenly blended. Fill each jalapeño half with cheese mixture.</li>
+                <li>Put halves back together and wrap each stuffed pepper with a slice of bacon. Arrange bacon-wrapped peppers on the prepared baking sheet.</li>
+                <li>Bake in the preheated oven until bacon is crispy, 25 to 35 minutes.</li>
+                <li>Serve hot with your favorite dipping sauce. Enjoy!</li>
+            </ol>
+        </div>
+</div>
 </body>
 </html>
