--- a/recipes/steakmarinade.html
+++ b/recipes/steakmarinade.html
@@ -3,28 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Steak Marinade Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <h1>Best Steak Marinade in Existence</h1>
-    <img src="https://www.allrecipes.com/thmb/tb61Fhkmb7CZ_AbSe7hQ8ggtknQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/143809-best-steak-marinade-in-existence-ARMag-3x2-1-8d7d61255c1e43aba092552e45c9d88d.jpg" alt-="steak marinade">
-    <h2>Description</h2>
-    <p>This steak marinade is a family recipe that has been developed only over the last 5 years. In this short time, it's made me famous in our close circle, but until now I've never shared it with anyone. We're not exaggerating with the title: This is truly the best steak marinade recipe in existence.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>½ cup olive oil</li>
-        <li>⅓ cup soy sauce</li>
-        <li>⅓ cup fresh lemon juice</li>
-        <li>¼ cup Worcestershire sauce</li>
-        <li>3 tablespoons dried basil</li>
-        <li>1 ½ tablespoons garlic powder</li>
-        <li>1 ½ tablespoons dried parsley flakes</li>
-        <li>1 teaspoon ground white pepper</li>
-        <li>1 teaspoon dried minced garlic (Optional)</li>
-        <li>¼ teaspoon hot pepper sauce (Optional)</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Place olive oil, soy sauce, lemon juice, Worcestershire sauce, basil, garlic powder, parsley, white pepper, minced garlic, and hot pepper sauce in a blender; blend on high speed until thoroughly combined, about 30 seconds.</li>
-    </ol>
+<body class="body">
+    <div class="about">
+        <h1>Best Steak Marinade in Existence</h1>
+        <p class="descr">This steak marinade is a family recipe that has been developed only over the last 5 years. In this short time, it's made me famous in our close circle, but until now I've never shared it with anyone. We're not exaggerating with the title: This is truly the best steak marinade recipe in existence.</p>
+
+        <img class="resize2" src="https://www.allrecipes.com/thmb/tb61Fhkmb7CZ_AbSe7hQ8ggtknQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/143809-best-steak-marinade-in-existence-ARMag-3x2-1-8d7d61255c1e43aba092552e45c9d88d.jpg" alt-="steak marinade">
+    </div>
+    <div class="content">
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>½ cup olive oil</li>
+                <li>⅓ cup soy sauce</li>
+                <li>⅓ cup fresh lemon juice</li>
+                <li>¼ cup Worcestershire sauce</li>
+                <li>3 tablespoons dried basil</li>
+                <li>1 ½ tablespoons garlic powder</li>
+                <li>1 ½ tablespoons dried parsley flakes</li>
+                <li>1 teaspoon ground white pepper</li>
+                <li>1 teaspoon dried minced garlic (Optional)</li>
+                <li>¼ teaspoon hot pepper sauce (Optional)</li>
+            </ul>
+        </div>
+        <div class="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>Place olive oil, soy sauce, lemon juice, Worcestershire sauce, basil, garlic powder, parsley, white pepper, minced garlic, and hot pepper sauce in a blender; blend on high speed until thoroughly combined, about 30 seconds.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
